myPhoto size changed

--- a/css/section.css
+++ b/css/section.css
@@ -30,7 +30,7 @@
     display: block;
     max-width: 35%;
     height: fit-content;
-    border-radius: 70px;
+    border-radius: 50%;
     border-style: none;
 }
 
